add skeleton and fix errors

--- a/Front/assets/scss/global.scss
+++ b/Front/assets/scss/global.scss
@@ -42,6 +42,7 @@
   --ui-warning: var(--support-warning-medium);
   --ui-error: var(--support-error-medium);
   --ui-neutral: var(--neutral-dark-medium);
+  --ui-neutral: var(--ui-color-neutral);
 }
 
 * {
